<resources>
    <string name="app_name">MileageChecker</string>
    <string name="total_number_of_kilometers">Total Number of Kilometers</string>
    <string name="total_amount_of_fuel">Total Amount of Fuel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selling_price">Selling Price</string>
    <string name="model_features">Model Features</string>
    <string name="car_model">car model</string>
    <string name="car_mileage">car mileage</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="show">Show</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="new_car">new car</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="select_source">Select Image Source</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>